[tool.poetry]
name = "linkedin-ai-api"
version = "0.1.0"
description = "LinkedIn AI Assistant API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
anthropic = "^0.5.0"
gunicorn = "^20.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"